[package]
name = "rpi-mailbox"
version = "0.1.0"
authors = ["eldesh <takayuki@idein.jp>"]
description = "An interface of the `mailbox` which is a low level interface of the RaspberryPi."
readme = "Readme.md"
keywords = ["raspberrypi"]

[dependencies]
nix = "0.10.0"
log = "0.4"
chrono = "0.4"
error-chain = "0.11"

