[package]
edition = "2021"
name = "rpi-mailbox"
version = "0.3.0"
authors = ["eldesh <takayuki@idein.jp>"]
description = "An interface of the `mailbox` which is a low level interface of the RaspberryPi."
homepage = "https://github.com/Idein/rpi-mailbox"
repository = "https://github.com/Idein/rpi-mailbox"
documentation = "https://docs.rs/rpi-mailbox"
readme = "Readme.md"
license = "Apache-2.0"
keywords = ["raspberrypi"]

[dependencies]
bitflags = "2.2"
chrono = "0.4"
log = "0.4"
nix = "0.26"
thiserror = "1.0"

